VFB March release: button bar moved to top and always visible, toolbar fixes, styling fixes

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -2,6 +2,17 @@
 
 #vfbterminfowidget {
   overflow: scroll;
+  margin-top: 20px;
+}
+
+#bar-div-vfbterminfowidget {
+    margin-top: -8px;
+    position: fixed;
+    height: 30px;
+    background-color: #010101;
+    z-index: 99;
+    float: left;
+    text-align: center;
 }
 
 .ui-widget-content a {
@@ -148,6 +159,7 @@
     position: relative;
     padding: 2px;
     background: transparent;
+    cursor: pointer;
 }
 
 .Collapsible__trigger:after {
